modified:   src/App.js 	new file:   src/Pagination/RatingPagination.js 	new file:   src/Pagination/ReviewPagination.js 	new file:   src/Pagination/WishPagination.js 	modified:   src/Styles/Comments/CommentsMainStyle.js 	new file:   src/Styles/Review/ReviewCommentPopupStyle.js 	modified:   src/Styles/Review/ReviewDetailsStyle.js 	modified:   src/Styles/Review/ReviewMainStyle.js 	new file:   src/chat_search/ActionProvider.js 	new file:   src/chat_search/Buttons.css 	new file:   src/chat_search/Buttons.js 	new file:   src/chat_search/ChatConfig.js 	new file:   src/chat_search/Chatbot.css 	new file:   src/chat_search/MessageParser.js 	modified:   src/components/Footers.js 	modified:   src/images/likeImage.png 	new file:   src/images/potato_admin.png 	modified:   src/layout/Mypage.css 	modified:   src/layout/Mypage.js 	modified:   src/login_pages/Login.js 	modified:   src/login_pages/Policy.css 	modified:   src/login_pages/Policy.js 	modified:   src/login_pages/Signup.css 	modified:   src/login_pages/Signup.js 	modified:   src/mypage/Calendar.js 	modified:   src/mypage/EditInfo.js 	new file:   src/mypage/Rating.css 	modified:   src/mypage/Rating.js 	modified:   src/mypage/Review.css 	modified:   src/mypage/Review.js 	modified:   src/mypage/Wish.css 	modified:   src/mypage/Wish.js 	modified:   src/pages/Comments/CommentsMain.js 	modified:   src/pages/Main/Main.js 	modified:   src/pages/Movie/MovieGenre.js 	modified:   src/pages/Movie/MovieGenrePagination.js 	modified:   src/pages/Movie/MovieInfoComments.js 	modified:   src/pages/PageNavigation.js 	new file:   src/pages/Review/ReviewCommentPopup.js 	modified:   src/pages/Review/ReviewMain.js 	modified:   src/pages/Review/ReviewUpdatePopup.js 	modified:   src/pages/Review/ReviewWritePopup.js 	new file:   src/pages/Review/reviewtest.js 	new file:   src/toolkit/actions/mypageReview_action.js 	new file:   src/toolkit/actions/mypagewish_action.js 	modified:   src/toolkit/actions/review_action.js 	new file:   src/toolkit/createS

--- a/src/login_pages/Policy.css
+++ b/src/login_pages/Policy.css
@@ -72,7 +72,7 @@
   box-sizing: border-box;
   border-radius: 10px;
   left: 8%;
-
+  overflow: auto;
 }
 
 .policyContent{
@@ -84,6 +84,7 @@
   box-sizing: border-box;
   border-radius: 10px;
   left: 8%;
+  overflow: auto;
 }
 
 p{
