--- a/src/layout/Mypage.css
+++ b/src/layout/Mypage.css
@@ -76,9 +76,7 @@
   border-radius: 50px;
   position: relative;
   margin: 10% 0%;
-
 }
-
 
 .box {
   position: relative;
@@ -98,7 +96,12 @@
 .aboutMyself {
   height: 130px;
   top: 15%;
-
+}
+.aboutMyself {
+  height: 110px;
+  top: 16%;
+  position: relative;
+  padding: 10px;
 }
 
 .line {
@@ -117,10 +120,13 @@
 .follow {
   height: 100px;
   top: 8%;
-
+}
+.mbti {
+  height: 20px;
+  top: 14%;
 }
 
-.buttonContainer{
+.buttonContainer {
   display: flex;
   flex-direction: column;
   position: relative;
@@ -132,19 +138,45 @@
   top: 10%;
 }
 
-.buttonContainer button{
+.buttonContainer button {
   background-color: white;
   position: relative;
   border-radius: 10px;
   height: 40px;
   width: 90px;
-  left: 48%;
+  left: 80%;
   top: 10%;
 }
 
-#mypageContainer p{
+#mypageContainer p {
   display: inline;
   /* font-size: 0.2em; */
-  padding: 3px;
-  width: 20px;
+  /* padding: 3px; */
+  /* width: 20px; */
 }
+
+.follow label {
+  padding: 10px;
+}
+
+.follow select {
+  margin-top: 10px;
+  width: 90px;
+}
+
+#mypageContainer #followBtn{
+  position: relative;
+  width: 60px;
+  height: 20px;
+  left: 38%;
+  top: 1%;
+}
+
+#mypageContainer #tomypage{
+  margin-top: 10px;
+  margin-left: 10px;
+  width: 150px;
+  border-radius: 10px;
+}
+
+
