--- a/src/mypage/Rating.css
+++ b/src/mypage/Rating.css
@@ -1,4 +1,4 @@
-#wishContainer{
+#ratingContainer{
   background-color: wheat;
   width: 440px;
   height: 450px;
@@ -7,17 +7,17 @@
   top: -40%;
 }
 
-.wishTitle h3{
+.ratingTitle h3{
   margin: 0;
   padding: 10px 10px 10px 0px; /*위 아래 오른쪽 왼쪽*/
 }
 
-.wishTitle .line{
+.ratingTitle .line{
   border: 1px solid grey;
   width: 440px;
 }
 
-.movieContainer{
+.rating{
   display: grid;
   grid-template-columns: repeat(3, 100px); /* 3열 각각 100px 너비 */
   grid-template-rows: auto; /* 자동 행 크기 */
@@ -35,23 +35,30 @@
   top: 3%;
 }
 
-#wishContainer .movie{
+#ratingContainer .movieRateInfo{
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
   width: 100px; /* 아이템 너비 */
   height: 150px; /* 아이템 높이 */
-  background-color: #e1e1e1; /* 그리드 아이템 배경색 */
-  border: 1px solid #ddd; /* 그리드 아이템 테두리 */
-  margin: auto; /* 가운데 정렬 */
+  background-color: transparent; /* 그리드 아이템 배경색 */
+
   
 }
 
-#wishContainer img{
+#ratingContainer .movie{
   width: 100px;
-  height: 150px;
+  height: 120px;
+  background-color: wheat;
+  margin-bottom: 10px;
 }
 
-textarea{
-  resize: none;
+#ratingContainer .rate{
+  width: 100px;
+  height: 20px;
+  background-color: wheat;
+}
+
+#ratingContainer img{
+  width: 100px;
+  height: 150px;
 }
